syntax = "proto3";

package blog;

option go_package = "github.com/judewood/gRPCSample/blog/proto"; 

import "google/protobuf/empty.proto";

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message BlogId {
    string id = 1;
}

message CurrentTime {
    string currentTime = 1;
}

message InitiateCurrentTime {
    int64 interval = 1;
}

service BlogService {
    rpc CreateBlog(Blog) returns (BlogId);
    rpc GetBlog(BlogId) returns (Blog);
    rpc UpdateBlog(Blog) returns (google.protobuf.Empty);
    rpc DeleteBlog(BlogId) returns (google.protobuf.Empty);
    rpc ListBlog(google.protobuf.Empty) returns (stream Blog);
    rpc SendCurrentTime(InitiateCurrentTime) returns ( stream CurrentTime);
}